dataset1235/2025-2/610742602/users/2447224811/executions/677928262_1462915504.log
== RUN (2025-08-28 17:33:51)
-- CODE: 
from math import  tan , radians

#entrada
lado = float(input("Digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado / (2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:32:06)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado /(2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:33:20)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("Digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado / (2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:33:16)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("Digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado / (2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:34:04)
-- CODE: 
from math import  tan , radians

#entrada
lado = float(input("Digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado / (2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentagono:A area do pentagono é 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:32:15)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado /(2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:31:44)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado /(2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:33:19)
-- CODE: 
from math import * tan , radians

#entrada
lado = float(input("Digite o comprimento do lado do pentagono:"))

# calculo da apótema
apotema = lado / (2 * tan(radians(36)))

# calculo da area
area = (5 * lado * apotema)/ 2

#saida formatada com duas casas decimais
print(f"A area do pentagono é {area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import * tan , radians
                       ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
